infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sreesaaj
  labels:
    name: sreesaaj
    environment: production
